# google-play-book-downloader

./: .editorconfig  .gitignore  README.md  decryptor.mjs  google-play-book-downloader-epub.mjs  google-play-book-downloader-epub.py  google-play-book-downloader-pdf.mjs  google-play-book-downloader-pdf.py  google-play-book-downloader.mjs  pdf-add-toc.py  play_book_epub_tool.py  pyproject.toml
play_book_pdf_tool/: play_book_pdf_tool.py
