[tool.poetry]
name = "play-book-pdf-tool"
version = "0.1"
description = "Add the toc to the generated PDF"
authors = ["devnoname120"]

[tool.poetry.scripts]
play-book-pdf-build = "play_book_pdf_tool.play_book_pdf_tool:pdf_generate"

[tool.poetry.dependencies]
python = "^3.8"
pikepdf = "^7.1.1"
img2pdf = "^0.4.4"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
