[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "play-book-pdf-tool"
version = "0.1"
description = "Add the toc to the generated PDF"
authors = ["devnoname120"]

[tool.poetry.scripts]
play-book-pdf-build = "play_book_pdf_tool.play_book_pdf_tool:pdf_generate"

[tool.poetry.dependencies]
python = "^3.13"
pikepdf = "^9.4.2"
img2pdf = "^0.4.4"
click = "^8.1.3"
pydash = "^8.0.0"
requests = "^2.32"
pycryptodomex = "^3.20"
ruff = "^0.5.0"
bs4 = "^0.0.2"
ebooklib = "^0.18"
mslex = "^1.3.0"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
